tests/inputs/errors/E004_1.bib
@string{cvpr = {Proc. of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)}}
@string{ijrr = {Intl. Journal of Robotics Research}}

%% useless knowledge: domains that are reserved: "example.com", "invalid.com", "localhost.com", "test.com"
@inproceedings{wang2023cvpr,
  author    = {R. Wang and A. Test},
  title     = {{Producing a valid BibTeX entry is not that hard: A study}},
  booktitle = cvpr,
  year      = 2023,
  url       = {https://www.invalid.com/abs/}
}